Fixed a few bugs on mobile safari

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,18 +17,22 @@ ul {
 
 .site-head {
     background-color: #F6F6F6;
-
-    display: flex;
-    flex-direction: row;
     width: 100%;
+    height: 48px;
+    padding: 0px;
+    box-sizing: border-box;
     a {
-        flex: 1;
-        padding: 1rem;
+        width: 49%;
+        height: 48px;
+        box-sizing: border-box;
+        display: inline-block;
         text-align: center;
         text-decoration: none;
+        padding-top: 15px;
         color: #B7B2AE;        
         font-size: 14px;
         font-weight: 300;
+        margin: 0px;
         &.active {
             color: #25ABBF;
             border-bottom: solid 2px #25ABBF;
@@ -37,9 +41,6 @@ ul {
     }
 
 }
-
-
-
 
 .events {
     color: #fff;
